[package]
name = "bonsai"
version = "0.1.0"
edition = "2024"
authors = ["Rory Tyrrell"]
description = "An minimal LSM-tree storage engine."
readme = "README.md"

[dependencies]
crc32fast = "1.5.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "2"
bytes = "1"
tracing = "0.1"
parking_lot = "0.12"
crossbeam-skiplist = "0.1"
fastbloom = { version = "0.17.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
